--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Graphic Designer Portfolio</title>
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 
@@ -40,7 +40,7 @@
 
       </div>
       <div class="right">
-        <img src="/Assets/rohan1.jpg" alt="Designer Photo">
+        <img src="rohan1.jpg" alt="Designer Photo">
       </div>
     </div>
   </header>
